# mcp-registry

./: .gitignore  .rules  FIXES_APPLIED.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  demo_restart.py  mcp-registry.prompt  pyproject.toml  pytest.ini  test_self_restart.py
docs/: ADDITIONAL_REGISTRY_SOURCES.md  ARCHITECTURE_DIAGRAM.md  DYNAMIC_TOOL_EXPOSURE.md  IMPLEMENTATION_SUMMARY.md  MCP_CONTAINER_STDIO_IMPLEMENTATION.md  MCP_OFFICIAL_REGISTRY_IMPLEMENTATION.md  SERVER_ACTIVATION_TEST.md  SESSION_SUMMARY_2025-11-11.md  TESTING_REPORT.md  TODOS_AND_MISSING_FEATURES.md  VERIFICATION_RESULTS.md  notifications.md
mcp_registry_server/: __init__.py  editor_config.py  mcp_client.py.bak  models.py  podman_runner.py  registry.py  schema_converter.py  server.py  stdio_runner.py  tasks.py
mcp_registry_server/scrapers/: __init__.py  awesome_mcp_scraper.py  docker_registry.py  github_utils.py  mcp_official_registry.py  mcpservers_scraper.py
scripts/: scrape_mcpservers.py  test_dynamic_tools.py  test_full_workflow.py  test_github_stars_all_sources.py  test_mcp_container.py  test_mcp_official_scraper.py
tests/: __init__.py  test_dynamic_tool_integration.py  test_editor_config.py  test_models.py  test_notifications.py  test_registry.py  test_schema_converter.py  test_scrapers.py  test_stdio_runner.py
